--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
   "author": "Patrick Kelly",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
+    "dotenv": "^8.0.0",
     "express": "^4.17.0",
-    "helmet": "^3.18.0"
+    "helmet": "^3.18.0",
+    "mongoose": "^5.5.11"
   }
 }
